[gd_scene load_steps=3 format=3 uid="uid://dcf37s2d4jc5g"]

[ext_resource type="Script" path="res://Escenas/Pause_menu.gd" id="1_pohnr"]

[sub_resource type="LabelSettings" id="LabelSettings_qv071"]
font_size = 27
font_color = Color(0.937255, 0.6, 0.929412, 1)
outline_size = 11

[node name="Pause_Menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pohnr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.454902, 1, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_qv071")
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="Reset" type="Button" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Reset Game
"

[node name="Quit" type="Button" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
